# agentic-ai-radiology

./: .env.example  .gitignore  Dockerfile  POSTMAN_TESTING.md  PROJECT_PLAN (1).md  Procfile  README.md  app.py  app_factory.py  docker-compose.yml  fetch_report_fhir.py  pyproject.toml  requirements-dev.txt  requirements.txt
critcom_agent/: agent.py  app.py
deploy/orthanc/: critcom_send_plugin.py
eval/: Dockerfile  report.py
eval/tests/: test_fhir_state.py
notebooks/: dcm4che_explore.ipynb  dcmtk_explore.ipynb
shared/: app_factory.py  middleware.py
shared/tools/: __init__.py  critcom_tools.py
src/critcom/: __init__.py
src/critcom/agent/: __init__.py
src/critcom/classification/: __init__.py  classifier.py
src/critcom/fhir/: __init__.py  client.py  models.py
src/critcom/scripts/: __init__.py  seed_dicom.py  seed_dicom_dcm4che.py  seed_dicom_dcmtk.py
src/critcom/tools/: __init__.py  classify_finding.py  dispatch_communication.py  fetch_radiologist_findings.py  fetch_report_dicom.py
tests/: conftest.py  test_classifier.py  test_fhir_client.py  test_fhir_models.py  test_middleware.py  test_radiologist_findings.py
tests/fixtures/dicom_findings/: 00001.json  00003.json  00007.json
tests/fixtures/fhir/: seed_bundle.json
tests/fixtures/reports/: sample_reports.json
ui/: app.py
