[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "critcom"
version = "0.1.0"
description = "FHIR-native agent for critical radiology results communication (ACR-compliant)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
authors = [{ name = "Lalitha Pranathi Pulavarthy" }]
keywords = ["radiology", "fhir", "agent", "mcp", "acr", "healthcare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "fhir.resources>=7.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.39.0",
    "google-adk>=0.3.0",
    "litellm>=1.52.0",
    "mcp>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-requests",
]

[project.scripts]
critcom-server = "critcom.server:main"
critcom-evaluate = "critcom.scripts.evaluate:main"
critcom-seed = "critcom.scripts.seed:main"

[project.urls]
Homepage = "https://github.com/drlalithapranathi/agentic-ai-radiology"
Repository = "https://github.com/drlalithapranathi/agentic-ai-radiology"

[tool.hatch.build.targets.wheel]
packages = ["src/critcom"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RET",
    "PL",
    "RUF",
]
ignore = [
    "PLR0913",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
files = ["src/critcom"]

[[tool.mypy.overrides]]
module = [
    "fhir.resources.*",
    "mcp.*",
    "google.adk.*",
    "litellm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/critcom",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires local HAPI FHIR server (skip by default)",
    "llm: makes real LLM API calls (skip by default — costs money)",
]

[tool.coverage.run]
branch = true
source = ["src/critcom"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]