[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "critcom"
version = "0.1.0"
description = "Critical Results Communication Agent for radiology — FHIR-native, A2A-ready"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "IUPUI SOIC", email = "noreply@iupui.edu" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "google-adk>=0.1.0",
    "starlette>=0.37",
    "uvicorn[standard]>=0.27",
    "pydicom>=2.4",
    "pynetdicom>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "honcho>=2.0",
]

[project.scripts]
critcom-seed = "critcom.scripts.seed:main"
critcom-seed-dicom = "critcom.scripts.seed_dicom:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not llm'"
markers = ["llm: tests that call a real LLM (skipped by default; run with -m llm)"]
